# human-ddsp

./: .gitignore  README.md  pyproject.toml
notebooks/: exploration.py
src/human_ddsp/: __init__.py  config.py  data.py  dataset.py  dsp.py  export.py  features.py  main.py  model.py  old.py  train.py  utils.py
