[project]
name = "human-ddsp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.5",
    "scipy>=1.16.3",
    "scipy-stubs~=1.16.3",
    "torch>=2.9.1",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
