[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.9.17,<0.10" ]

[project]
name = "human-ddsp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "nn-tilde>=1.5.6",
  "numpy>=2.3.5",
  "polars>=1.36.1",
  "scipy>=1.16.3",
  "scipy-stubs~=1.16.3",
  "soundfile>=0.13.1",
  "torch~=2.5.0",
  "torchaudio>=2.5.1",
]
